added textareas to the columnns

--- a/index.html
+++ b/index.html
@@ -21,44 +21,67 @@
   </header>
   <div class="container">
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
-      <div class="col-md-2"></div>
+      <div class="col-sm-1 time-block">
+        <p>9 AM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
     </div>
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
-      <div class="col-md-2"></div>
+      <div class="col-sm-1 time-block">
+        <p>10 AM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
     </div>
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
-      <div class="col-md-2"></div>
+      <div class="col-sm-1 time-block">
+        <p>11 AM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
     </div>
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
-      <div class="col-md-2"></div>
+      <div class="col-sm-1 time-block">
+        <p>12 PM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
     </div>
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
-      <div class="col-md-2"></div>
+      <div class="col-sm-1 time-block">
+        <p>1 PM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
     </div>
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
-      <div class="col-md-2"></div>
+      <div class="col-sm-1 time-block">
+        <p>2 PM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
     </div>
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col-md-8"></div>
-      <div class="col-md-2"></div>
+      <div class="col-sm-1 time-block">
+        <p>3 PM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
     </div>
     <div class="row">
-      <div class="col-md-2"></div>
-      <div class="col"></div>
-      <div class="col-md-2"></div>
+      <div class="col-sm-1 time-block">
+        <p>4 PM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-1 time-block">
+        <p>5 PM</p>
+      </div>
+      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
+      <div class="col-sm-1 saveBtn"></div>
     </div>
   </div>
 
