--- a/index.html
+++ b/index.html
@@ -24,64 +24,64 @@
       <div class="col-sm-1 time-block">
         <p>9 AM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="9" class="col-sm-10 description" data-hour="9"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
     <div class="row">
       <div class="col-sm-1 time-block">
         <p>10 AM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="10" class="col-sm-10 description" data-hour="10"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
     <div class="row">
       <div class="col-sm-1 time-block">
         <p>11 AM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="11" class="col-sm-10 description " data-hour="11"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
     <div class="row">
       <div class="col-sm-1 time-block">
         <p>12 PM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="12" class="col-sm-10 description " data-hour="12"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
     <div class="row">
       <div class="col-sm-1 time-block">
         <p>1 PM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="13" class="col-sm-10 description textbox" data-hour="13"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
     <div class="row">
       <div class="col-sm-1 time-block">
         <p>2 PM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="14" class="col-sm-10 description textbox" data-hour="14"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
     <div class="row">
       <div class="col-sm-1 time-block">
         <p>3 PM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="15" class="col-sm-10 description textbox" data-hour="15"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
     <div class="row">
       <div class="col-sm-1 time-block">
         <p>4 PM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="16" class="col-sm-10 description textbox" data-hour="16"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
     <div class="row">
       <div class="col-sm-1 time-block">
         <p>5 PM</p>
       </div>
-      <textarea class="col-sm-10 description" name="" id="" cols="30" rows="10"></textarea>
-      <div class="col-sm-1 saveBtn"></div>
+      <textarea id="17" class="col-sm-10 description textbox" data-hour="17"></textarea>
+      <button class="col-sm-1 saveBtn"></button>
     </div>
   </div>
 
