added functionality to the buttons and textareas

--- a/index.html
+++ b/index.html
@@ -20,68 +20,77 @@
     <p id="currentDay" class="lead"></p>
   </header>
   <div class="container">
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block" data-hour="9">
         <p>9 AM</p>
       </div>
-      <textarea id="9" class="col-sm-10 description" data-hour="9"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="9" class="col-sm-10 description" ></textarea>
+      <button id="btn9" class="col-sm-1 saveBtn"></button>
     </div>
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block" data-hour="10">
         <p>10 AM</p>
       </div>
-      <textarea id="10" class="col-sm-10 description" data-hour="10"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="10" class="col-sm-10 description" ></textarea>
+      <button id="btn10" class="col-sm-1 saveBtn"></button>
     </div>
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block " data-hour="11">
         <p>11 AM</p>
       </div>
-      <textarea id="11" class="col-sm-10 description " data-hour="11"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="11" class="col-sm-10 description " ></textarea>
+      <button id="btn11" class="col-sm-1 saveBtn"></button>
     </div>
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block" data-hour="12">
         <p>12 PM</p>
       </div>
-      <textarea id="12" class="col-sm-10 description " data-hour="12"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="12" class="col-sm-10 description " ></textarea>
+      <button id="btn12" class="col-sm-1 saveBtn"></button>
     </div>
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block" data-hour="13">
         <p>1 PM</p>
       </div>
-      <textarea id="13" class="col-sm-10 description textbox" data-hour="13"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="13" class="col-sm-10 description textbox" ></textarea>
+      <button id="btn13" class="col-sm-1 saveBtn"></button>
     </div>
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block" data-hour="14">
         <p>2 PM</p>
       </div>
-      <textarea id="14" class="col-sm-10 description textbox" data-hour="14"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="14" class="col-sm-10 description textbox" ></textarea>
+      <button id="btn14" class="col-sm-1 saveBtn"></button>
     </div>
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block" data-hour="15">
         <p>3 PM</p>
       </div>
-      <textarea id="15" class="col-sm-10 description textbox" data-hour="15"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="15" class="col-sm-10 description textbox" ></textarea>
+      <button id="btn15" class="col-sm-1 saveBtn"></button>
     </div>
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block" data-hour="16">
         <p>4 PM</p>
       </div>
-      <textarea id="16" class="col-sm-10 description textbox" data-hour="16"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="16" class="col-sm-10 description textbox" ></textarea>
+      <button id="btn16" class="col-sm-1 saveBtn"></button>
     </div>
+
     <div class="row">
-      <div class="col-sm-1 time-block">
+      <div class="col-sm-1 time-block" data-hour="17">
         <p>5 PM</p>
       </div>
-      <textarea id="17" class="col-sm-10 description textbox" data-hour="17"></textarea>
-      <button class="col-sm-1 saveBtn"></button>
+      <textarea id="17" class="col-sm-10 description textbox" ></textarea>
+      <button id="btn17" class="col-sm-1 saveBtn"></button>
     </div>
   </div>
 
