--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-sm-1 time-block" data-hour="9">
+      <div class="col-sm-1">
         <p>9 AM</p>
       </div>
       <textarea id="9" class="col-sm-10 description" data-hour="9"></textarea>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-1 time-block" data-hour="10">
+      <div class="col-sm-1">
         <p>10 AM</p>
       </div>
       <textarea id="10" class="col-sm-10 description" data-hour="10"></textarea>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-1 time-block " data-hour="11">
+      <div class="col-sm-1 time-block ">
         <p>11 AM</p>
       </div>
       <textarea id="11" class="col-sm-10 description " data-hour="11"></textarea>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-1 time-block" data-hour="12">
+      <div class="col-sm-1 time-block">
         <p>12 PM</p>
       </div>
       <textarea id="12" class="col-sm-10 description " data-hour="12"></textarea>
@@ -54,42 +54,42 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-1 time-block" data-hour="13">
+      <div class="col-sm-1 time-block">
         <p>1 PM</p>
       </div>
-      <textarea id="13" class="col-sm-10 description textbox" data-hour="13"></textarea>
+      <textarea id="13" class="col-sm-10 description" data-hour="13"></textarea>
       <button id="btn13" class="col-sm-1 saveBtn fas fa-save"></button>
     </div>
 
     <div class="row">
-      <div class="col-sm-1 time-block" data-hour="14">
+      <div class="col-sm-1 time-block">
         <p>2 PM</p>
       </div>
-      <textarea id="14" class="col-sm-10 description textbox" data-hour="14"></textarea>
+      <textarea id="14" class="col-sm-10 description" data-hour="14"></textarea>
       <button id="btn14" class="col-sm-1 saveBtn fas fa-save"></button>
     </div>
 
     <div class="row">
-      <div class="col-sm-1 time-block" data-hour="15">
+      <div class="col-sm-1 time-block">
         <p>3 PM</p>
       </div>
-      <textarea id="15" class="col-sm-10 description textbox" data-hour="15"></textarea>
+      <textarea id="15" class="col-sm-10 description" data-hour="15"></textarea>
       <button id="btn15" class="col-sm-1 saveBtn fas fa-save"></button>
     </div>
 
     <div class="row">
-      <div class="col-sm-1 time-block" data-hour="16">
+      <div class="col-sm-1 time-block">
         <p>4 PM</p>
       </div>
-      <textarea id="16" class="col-sm-10 description textbox"  data-hour="16"></textarea>
+      <textarea id="16" class="col-sm-10 description"  data-hour="16"></textarea>
       <button id="btn16" class="col-sm-1 saveBtn fas fa-save"></button>
     </div>
 
     <div class="row">
-      <div class="col-sm-1 time-block" data-hour="17">
+      <div class="col-sm-1 time-block">
         <p>5 PM</p>
       </div>
-      <textarea id="17" class="col-sm-10 description textbox" data-hour="17"></textarea>
+      <textarea id="17" class="col-sm-10 description" data-hour="17"></textarea>
       <button id="btn17" class="col-sm-1 saveBtn fas fa-save"></button>
     </div>
   </div>
