fixed a css issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-sm-1">
+      <div class="col-sm-1 time-block">
         <p>9 AM</p>
       </div>
       <textarea id="9" class="col-sm-10 description" data-hour="9"></textarea>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-1">
+      <div class="col-sm-1 time-block">
         <p>10 AM</p>
       </div>
       <textarea id="10" class="col-sm-10 description" data-hour="10"></textarea>
